Bug 252530 - [JSC] Fix trunc trap exception in new Wasm BBQ
Summary: [JSC] Fix trunc trap exception in new Wasm BBQ
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-18 02:52 PST by Yusuke Suzuki
Modified: 2023-02-18 10:08 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2023-02-18 02:52:57 PST
...
Comment 1 Radar WebKit Bug Importer 2023-02-18 02:53:12 PST
<rdar://problem/105628911>
Comment 2 Yusuke Suzuki 2023-02-18 02:53:54 PST
Pull request: https://github.com/WebKit/WebKit/pull/10331
Comment 3 EWS 2023-02-18 10:08:04 PST
Committed 260515@main (8067c0f68fc5): <https://commits.webkit.org/260515@main>

Reviewed commits have been landed. Closing PR #10331 and removing active labels.