[JSC] Fix trunc trap exception in new Wasm BBQ https://bugs.webkit.org/show_bug.cgi?id=252530 rdar://105628911

Reviewed by Mark Lam.

Fix thrown exception type for trunc trapping.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::truncTrapping):

Canonical link: https://commits.webkit.org/260515@main